--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">My First App</string>
+    <string name="app_name">My First App - Simulador</string>
+
+    <string name="cd_simulador">Matches simulation button</string>
+    <string name="cd_home_team">Home team image.</string>
+    <string name="dc_away_team">Away team image.</string>
+
+    <string name="txt_versus" translatable="false">X</string>
 </resources>
